--- a/app/styles/main-8-no-flip.scss
+++ b/app/styles/main-8-no-flip.scss
@@ -11,8 +11,7 @@
     position: relative;
 }
 
-.mover {
-    @extend %btn;
+.btn-mover {
     position: absolute;
     background-color: $blue;
     width: 200px;
