--- a/app/styles/main-8-no-flip.scss
+++ b/app/styles/main-8-no-flip.scss
@@ -2,12 +2,11 @@
 @import "partials/shared-styles";
 
 .container {
-    background-color: $red;
+    background-color: rgba($red, 0.5);
     width: 50vw;
     height: 50vh;
     margin: 20px;
     padding: 10px;
-    opacity: 0.7;
     position: relative;
 }
 
