move btn into own layer

--- a/app/styles/main-9-flip.scss
+++ b/app/styles/main-9-flip.scss
@@ -20,6 +20,7 @@
     width: 200px;
     text-align: center;
     color: $white;
+    will-change: transform;
 
     &--moved {
         bottom: 10px;
