circles don't smile

--- a/app/styles/main-1.scss
+++ b/app/styles/main-1.scss
@@ -1,7 +1,7 @@
 @import "partials/variables";
 @import "partials/shared-styles";
 
-.smiley {
+.circle {
     width: 100px;
     height: 100px;
     background: yellow;
@@ -13,7 +13,7 @@
 
     @for $i from 0 through $elements {
         &:nth-child(#{$i}) {
-            background: adjust-hue($red, $i * (365deg/$elements));
+            background: adjust-hue($red, $i * (360deg/$elements));
         }
     }
 }
