--- a/app/styles/main-6-will-change.scss
+++ b/app/styles/main-6-will-change.scss
@@ -1,7 +1,7 @@
 @import "partials/variables";
 @import "partials/shared-styles";
 
-.smiley {
+.circle {
     width: 100px;
     height: 100px;
     background: yellow;
@@ -15,7 +15,7 @@
 
     @for $i from 0 through $elements {
         &:nth-child(#{$i}) {
-            background: adjust-hue($red, $i * (365deg/$elements));
+            background: adjust-hue($red, $i * (360deg/$elements));
         }
     }
 }
